--- a/config/locales/pt-br.json
+++ b/config/locales/pt-br.json
@@ -107,6 +107,8 @@
   "notification.email.contact.accepted": "<strong>{{displayName}}</strong> aceitou a sua solicitação de amizade",
   "notification.email.comment.created": "{{displayName}} comentou <strong>{{targetContentTeaser}}</strong> no conteúdo <strong>{{relatedContentTeaser}}</strong> {{group}}",
 
+  "notifications.email.subject": "Novas notificações no {{appName}}",
+
   "post.contentType.image": "a imagem",
   "post.contentType.text": "o texto",
   "post.contentType.wembed": "o conteúdo",
