added default config for models and connections

--- a/config/locales/pt-br.json
+++ b/config/locales/pt-br.json
@@ -128,5 +128,73 @@
 
   "wembed.remove": "Remover link",
 
-  "messenger.contact.writing": "digitando ..."
+  "messenger.contact.writing": "digitando ...",
+
+  "auth.register.form.language": "Linguagem",
+  "A brand new app.": "Une toute nouvelle application.",
+  "auth.register.title": "Registar-se na rede",
+  "auth.register.form.submit": "Enviar",
+  "auth.register.terms.message": "By clicking Sign Up, you agree to: We dont are responsible for anything that may happens to your data in this test system",
+  "auth.register.form.displayName": "Seu nome de exibição",
+  "auth.register.form.username": "digite um nome único",
+  "auth.register.form.email": "Seu email",
+  "auth.register.form.password": "Digite uma senha",
+  "auth.register.form.confirmPassword": "Repetir a senha",
+  "auth.register.form.error.unknow": "Erro desconhecido ao tentar registrar a conta de usuário, por favor tente mais tarde ",
+  "auth.register.error.email.registered": "O email {{email}} já está registrado no sistema",
+  "auth.login.title": "Autenticar no sistema",
+  "auth.login.link.forgot.password": "Relembrar a senha",
+  "auth.login.link.forgot.email": "Relembrar o email",
+  "auth.login.link.create.account": "Registrar-se",
+  "user.account.title": "Editar / ver conta de usuário",
+  "user.account.update.success": "{{displayName}} sua conta foi atualizada com sucesso",
+  "auth.register.requires.email.validation.message": "{{displayName}} a sua conta de usuário foi criada mas é nescessário validar o seu email!<br>Enviamos um email de validação para <strong>{{email}}</strong> com as instruções de como validar a conta de usuário",
+  "auth.register.form.biography.placeholder": " ",
+  "auth.register.form.biography.label": "Sua apresentação ou uma breve historia sobre você:",
+  "auth.register.form.fields.required.title": "Informações nescessárias para criação da conta:",
+  "auth.register.form.fields.optional.title": "Informações opcionais:",
+  "navbar.link.return.network": "Ir para a rede social",
+  "navbar.link.register": "Registrar",
+  "navbar.link.login": "Autenticar",
+  "navbar.link.user.account": "Editar / ver conta de usuário",
+  "navbar.link.user.logout": "deslogar",
+  "user.form.interests.label": "Interesses:",
+  "user.form.interests.description": "O que é interesante para você? selecione algumas opções do campo acima",
+  "user.form.competences.label": "Competencias:",
+  "user.form.competences.description": "Você é bom em que, qual a sua competencia? selecione algumas opções do campo acima",
+  "user.form.interests.title": "Qual o seu interesse e qual a sua competencia na rede?",
+  "Field <strong>password</strong> is required": "Field <strong>password</strong> is required",
+  "Field <strong>Confirm new password</strong> is required": "Field <strong>Confirm new password</strong> is required",
+  "auth.register.error.username.registered": "O nome de usuário <strong>{{username}}</strong> não está disponível, por favor digite um nome de usuário diferente",
+  "avatar.page.title": "Sua foto na rede",
+  "avatar.page.description": "Está foto abaixo aparecerá para os outros membros da rede",
+  "avatar.menu.link.avatar.change": "Alterar foto",
+  "avatar.menu.link.avatar.home": "Ver foto",
+  "avatar.page.change.title": "Página de alterar foto",
+  "avatar.form.avatar.label": "Selecione uma imagem:",
+  "avatar.form.submit.label": "Salvar",
+  "avatar.form.cancel.label": "Cancelar",
+  "avatar.upload.sucessfull": "Foto alterada com sucesso",
+  "avatar.menu.link.avatar.crop": "Redimencionar foto",
+  "avatar.page.crop.title": "Redimencionar foto",
+  "avatar.page.crop.description": "Clique nos cantos da foto para redimenciona-la e depois clique o botão salvar.",
+  "avatar.page.change.description": "Selecione uma imagem clicando no campo abaixo e depois clique em salvar.",
+  "avatar.form.crop.submit.label": "Salvar",
+  "avatar.crop.sucessfull": "Foto redimencionada com sucesso",
+  "forbidden": "É nescessário se autenticar",
+  "navbar.link.user.avatar": "Alterar foto",
+  "Wrong Password": "Senha errada",
+  "<strong>New password</strong> and <strong>Confirm new password</strong> are different": "<strong>Nova senha</strong> e <strong>confirmar nova senha</strong> são diferentes.",
+  "auth.register.requires.email.validation": "Sua conta de usuário foi criada com sucesso no sistema mas é nescessário acessar o email informado e clicar no link de validação.",
+  "auth.register.error.emailOrUsername.ivalid": "O seu email ou nome de usuário informados não são validos.",
+  "auth.register.send.email.error": "Erro ao tentar enviar o email de validação de conta, por favor entre em contato com os administradores do sistema",
+  "Password and email is required": "Senha e email são nescessários para se autenticar no sistema",
+  "User not found": "O usuário não foi encontrado",
+  "auth.login.password.wrong": "A senha ou email estão errados.",
+  "auth.login.user.get.error": "Erro ao tentar encontrar o usuário no sistema, por favor entre em contato com um administrador do sistema ou tente novamente mais tarde.",
+  "auth.login.user.not.found": "Não existe usuário registrado no sistema para o email{{email}}.",
+  "Error.Passport.Password.NotSet": "Error.Passport.Password.NotSet",
+  "Error.Passport.Password.Invalid": "Error.Passport.Password.Invalid",
+  "Error.Passport.Password.Wrong": "Error.Passport.Password.Wrong",
+  "Error.Passport.Email.NotFound": "Error.Passport.Email.NotFound"
 }
