--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -15,5 +15,7 @@
 	"New password set successfully": "New password set successfully",
 	"field.password.invalid": "field.password.invalid",
 	"auth.change-password.reset-password": "auth.change-password.reset-password",
-	"auth.change-password.success": "auth.change-password.success"
+	"auth.change-password.success": "auth.change-password.success",
+	"role.addRoleToUser.role.not.found": "role.addRoleToUser.role.not.found",
+	"role.addRoleToUser.success": "role.addRoleToUser.success"
 }
