add role create and delete routes

--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -17,5 +17,6 @@
 	"auth.change-password.reset-password": "auth.change-password.reset-password",
 	"auth.change-password.success": "auth.change-password.success",
 	"role.addRoleToUser.role.not.found": "role.addRoleToUser.role.not.found",
-	"role.addRoleToUser.success": "role.addRoleToUser.success"
+	"role.addRoleToUser.success": "role.addRoleToUser.success",
+	"role.removeRoleFromUser.success": "role.removeRoleFromUser.success"
 }
