--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -20,5 +20,6 @@
 	"role.addRoleToUser.success": "role.addRoleToUser.success",
 	"role.removeRoleFromUser.success": "role.removeRoleFromUser.success",
 	"role.addRoleToUser.param.roleName.required": "role.addRoleToUser.param.roleName.required",
-	"role.removeRoleFromUser.param.roleName.required": "role.removeRoleFromUser.param.roleName.required"
+	"role.removeRoleFromUser.param.roleName.required": "role.removeRoleFromUser.param.roleName.required",
+	"we.email.groupInvite.subject": "we.email.groupInvite.subject"
 }
