move apis to others plugins

--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -21,5 +21,6 @@
 	"role.removeRoleFromUser.success": "role.removeRoleFromUser.success",
 	"role.addRoleToUser.param.roleName.required": "role.addRoleToUser.param.roleName.required",
 	"role.removeRoleFromUser.param.roleName.required": "role.removeRoleFromUser.param.roleName.required",
-	"we.email.groupInvite.subject": "we.email.groupInvite.subject"
+	"we.email.groupInvite.subject": "we.email.groupInvite.subject",
+	"login.block.button.text": "login.block.button.text"
 }
