add register form and update user model

--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -29,5 +29,25 @@
 	"form-login-password": "form-login-password",
 	"form-placeholder-login-password": "form-placeholder-login-password",
 	"form-login-submit": "form-login-submit",
-	"auth.login.title": "auth.login.title"
+	"auth.login.title": "auth.login.title",
+	"auth.confirmPassword.and.newPassword.diferent": "auth.confirmPassword.and.newPassword.diferent",
+	"form-register-email": "form-register-email",
+	"form-placeholder-register-email": "form-placeholder-register-email",
+	"form-register-password": "form-register-password",
+	"form-placeholder-register-password": "form-placeholder-register-password",
+	"form-register-submit": "form-register-submit",
+	"auth.login.register": "auth.login.register",
+	"form-register-username": "form-register-username",
+	"form-placeholder-register-username": "form-placeholder-register-username",
+	"form-register-displayName": "form-register-displayName",
+	"form-placeholder-register-displayName": "form-placeholder-register-displayName",
+	"form-register-fullName": "form-register-fullName",
+	"form-placeholder-register-fullName": "form-placeholder-register-fullName",
+	"form-register-confirmPassword": "form-register-confirmPassword",
+	"form-placeholder-register-confirmPassword": "form-placeholder-register-confirmPassword",
+	"form-register-confirmEmail": "form-register-confirmEmail",
+	"form-placeholder-register-confirmEmail": "form-placeholder-register-confirmEmail",
+	"userId cannot be an array or an object": "userId cannot be an array or an object",
+	"auth.email.and.confirmEmail.diferent": "auth.email.and.confirmEmail.diferent",
+	"Validation isEmail failed": "Validation isEmail failed"
 }
