remove uneed passport strategies and update auth forms

--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -49,5 +49,25 @@
 	"form-placeholder-register-confirmEmail": "form-placeholder-register-confirmEmail",
 	"userId cannot be an array or an object": "userId cannot be an array or an object",
 	"auth.email.and.confirmEmail.diferent": "auth.email.and.confirmEmail.diferent",
-	"Validation isEmail failed": "Validation isEmail failed"
+	"Validation isEmail failed": "Validation isEmail failed",
+	"Login": "Login",
+	"Register": "Register",
+	"form-helper-register-username": "form-helper-register-username",
+	"form-helper-register-displayName": "form-helper-register-displayName",
+	"form-helper-register-fullName": "form-helper-register-fullName",
+	"form-register-gender": "form-register-gender",
+	"Masculine": "Masculine",
+	"Feminine": "Feminine",
+	"form-helper-register-gender": "form-helper-register-gender",
+	"form-helper-register-password": "form-helper-register-password",
+	"form-helper-register-confirmPassword": "form-helper-register-confirmPassword",
+	"form-helper-register-email": "form-helper-register-email",
+	"form-helper-register-confirmEmail": "form-helper-register-confirmEmail",
+	"form-register-acceptTerms": "form-register-acceptTerms",
+	"form-helper-register-acceptTerms": "form-helper-register-acceptTerms",
+	"form-helper-login-email": "form-helper-login-email",
+	"form-helper-login-password": "form-helper-login-password",
+	"Profile": "Profile",
+	"Logout": "Logout",
+	"form-login-persistent": "form-login-persistent"
 }
