update newPassword and reset password pages for we.js 0.3.x

--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -69,5 +69,6 @@
 	"form-helper-login-password": "form-helper-login-password",
 	"Profile": "Profile",
 	"Logout": "Logout",
-	"form-login-persistent": "form-login-persistent"
+	"form-login-persistent": "form-login-persistent",
+	"auth.forgot-password": "auth.forgot-password"
 }
