add we-action-edit-btn helper

--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -77,5 +77,7 @@
 	"not.found": "not.found",
 	"go.to": "go.to",
 	"home": "home",
-	"auth.change-password": "auth.change-password"
+	"auth.change-password": "auth.change-password",
+	"yes": "yes",
+	"no": "no"
 }
