fix widget tests

--- a/test/locales/pt-br.json
+++ b/test/locales/pt-br.json
@@ -82,5 +82,6 @@
 	"no": "no",
 	"Widget": "Widget",
 	"Edit": "Edit",
-	"Delete": "Delete"
+	"Delete": "Delete",
+	"widget.delete.confirm.msg": "widget.delete.confirm.msg"
 }
