update plugin locales

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -1,29 +1,32 @@
 {
-	"Login": "Login",
-	"Register": "Register",
-	"user.profile.view": "user.profile.view",
-	"user.profile.edit": "user.profile.edit",
-	"auth.change-password": "auth.change-password",
-	"Logout": "Logout",
-	"we.email.AccontActivationEmail.subject": "we.email.AccontActivationEmail.subject",
-	"auth.register.require.email.activation": "auth.register.require.email.activation",
+	"Login": "Entrar",
+	"Register": "Registrar",
+	"user.profile.view": "Ver perfil",
+	"user.profile.edit": "Editar perfil",
+	"auth.change-password": "Mudar senha",
+	"Logout": "Sair",
+	"we.email.AccontActivationEmail.subject": "Validar email de usuário",
+	"auth.register.require.email.activation": "A sua conta de usuário foi criada mas você deve validar o seu email clicando no link de enviamos para a conta de email informada no registro",
 	"login.block.button.text": "login.block.button.text",
 	"login.block.form.new.account.link": "login.block.form.new.account.link",
-	"widget.delete.confirm.msg": "widget.delete.confirm.msg",
+	"widget.delete.confirm.msg": "Vocẽ tem certeza que deseja deletar esse widget?",
 	"auth.confirmPassword.and.newPassword.diferent": "auth.confirmPassword.and.newPassword.diferent",
 	"auth.email.and.confirmEmail.diferent": "auth.email.and.confirmEmail.diferent",
-	"Validation isEmail failed": "Validation isEmail failed",
+	"Validation isEmail failed": "O formato do email é inválido",
 	"auth.login.user.incorrect.password.or.email": "auth.login.user.incorrect.password.or.email",
-	"auth.access.invalid.token": "auth.access.invalid.token",
-	"auth.forgot-password": "auth.forgot-password",
+	"auth.access.invalid.token": "O token de autenticação está inválido",
+	"auth.forgot-password": "Mudar senha",
 	"auth.forgot-password.reset-password": "auth.forgot-password.reset-password",
 	"auth.forgot-password.email.send": "auth.forgot-password.email.send",
-	"auth.new-password": "auth.new-password",
-	"Profile": "Profile",
+	"auth.new-password": "Nova senha",
+	"Profile": "Perfil",
 	"auth.change-password.reset-password": "auth.change-password.reset-password",
 	"auth.change-password.success": "auth.change-password.success",
 	"auth.reset-password.success.can": "auth.reset-password.success.can",
 	"Widget": "Widget",
-	"Edit": "Edit",
-	"Delete": "Delete"
+	"Edit": "Ediar",
+	"Delete": "Deletar",
+	"widget.add": "Adicionar widget",
+	"layout.select.widget.type": "Selecione o tipo de widget",
+	"layout.edit.hide.btn": "Editar layout"
 }
