--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -28,5 +28,83 @@
 	"Delete": "Deletar",
 	"widget.add": "Adicionar widget",
 	"layout.select.widget.type": "Selecione o tipo de widget",
-	"layout.edit.hide.btn": "Editar layout"
+	"layout.edit.hide.btn": "Editar layout",
+	"date.to": "a",
+
+  "layout.edit.btn": "Editar layout",
+  "image.remove": "remover imagem",
+  "image.selector": "Selecionar imagem",
+  "image.uploader.title": "Enviar imagem",
+  "image.selector.title": "Selecionar imagem",
+  "image.upload.selector.btn": "Selecionar para enviar",
+  "file.image.select.btn": "selecionar imagem",
+  "form-user-username": "Nome de usuário",
+  "form-placeholder-user-username": " ",
+  "form-helper-user-username": "Exemplo: santossouza",
+  "form-user-displayName": "Nome de exibição",
+  "form-placeholder-user-displayName": " ",
+  "form-helper-user-displayName": "O nome de exibição no sistema",
+  "form-user-fullName": "Nome completo",
+  "form-placeholder-user-fullName": " ",
+  "form-helper-user-fullName": " ",
+  "form-user-biography": "Sobre",
+  "form-helper-user-biography": " ",
+  "form-user-gender": "Género",
+  "form-helper-user-gender": " ",
+  "form-user-email": "Email",
+  "form-placeholder-user-email": " ",
+  "form-helper-user-email": " ",
+  "form-user-organization": "Organização",
+  "form-helper-user-organization": " ",
+  "form-user-avatar": "Avatar",
+  "form-helper-user-avatar": " ",
+  "form-user-banner": "Banner do perfil",
+  "form-helper-user-banner": " ",
+  "form-change-password-password": "Senha atual",
+  "form-placeholder-change-password-password": " ",
+  "form-helper-change-password-password": " ",
+  "form-change-password-newPassword": "Nova senha",
+  "form-placeholder-change-password-newPassword": " ",
+  "form-helper-change-password-newPassword": " ",
+  "form-change-password-rNewPassword": "Repetir a sua senha",
+  "form-placeholder-change-password-rNewPassword": " ",
+  "form-helper-change-password-rNewPassword": " ",
+  "form-change-password-submit": "Enviar",
+  "form-login-email": "Email",
+  "form-placeholder-login-email": "Digite o seu email aqui ...",
+  "form-helper-login-email": "Seu email",
+  "form-login-password": "senha",
+  "form-placeholder-login-password": "Digite a sua senha aqui ...",
+  "form-helper-login-password": " ",
+  "form-login-persistent": "Permanecer logado",
+  "form-login-submit": "Enviar",
+  "form-register-username": "Nome de usuário",
+  "form-placeholder-register-username": " ",
+  "form-helper-register-username": " ",
+  "form-register-fullName": "Nome completo",
+  "form-placeholder-register-fullName": " ",
+  "form-helper-register-fullName": " ",
+  "form-register-gender": "Género",
+  "form-helper-register-gender": " ",
+  "form-register-password": "Password",
+  "form-placeholder-register-password": " ",
+  "form-helper-register-password": " ",
+  "form-register-confirmPassword": "Repetir a senha",
+  "form-placeholder-register-confirmPassword": " ",
+  "form-helper-register-confirmPassword": " ",
+  "form-register-email": "Email",
+  "form-placeholder-register-email": " ",
+  "form-helper-register-email": " ",
+  "form-register-confirmEmail": "Repetir a senha",
+  "form-placeholder-register-confirmEmail": " ",
+  "form-helper-register-confirmEmail": " ",
+  "form-register-organization": "Organização",
+  "form-helper-register-organization": " ",
+  "form-register-acceptTerms": "Você aceita os termos de uso do sistema?",
+  "form-helper-register-acceptTerms": " ",
+  "form-register-submit": "Enviar",
+  "form-forgot-password-email": "Email",
+  "form-placeholder-forgot-password-email": " ",
+  "form-helper-forgot-password-email": "Seu email do sistema",
+  "form-forgot-password-submit": "Enviar"
 }
