add widget plugin locales

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -27,6 +27,11 @@
   "Delete": "Delete",
   "widget.add": "Add widget",
   "widget.sort": "Sort widgets",
+  "widget.visibility": "Show the widget: ",
+  "widget.in-portal": "In all pages",
+  "widget.in-session": "In this session",
+  "widget.in-session-record": "In contents of this session",
+  "widget.in-page": "In current page",
   "layout.select.widget.type": "Select widget type",
   "layout.edit.hide.btn": "Save layout",
   "layout.edit.btn": "Edit layout",
