--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -24,13 +24,18 @@
 	"auth.change-password.success": "auth.change-password.success",
 	"auth.reset-password.success.can": "auth.reset-password.success.can",
 	"Widget": "Widget",
-	"Edit": "Ediar",
+	"Edit": "Editar",
 	"Delete": "Deletar",
 	"widget.add": "Adicionar widget",
+  "widget.visibility": "Exibir o widget: ",
+  "widget.in-context": "No contexto atual",
+  "widget.in-portal": "Em todas as páginas",
+  "widget.in-session": "Nessa sessão",
+  "widget.in-session-record": "Nos conteúdos dessa sessão",
+  "widget.in-page": "Na página atual",
 	"layout.select.widget.type": "Selecione o tipo de widget",
 	"layout.edit.hide.btn": "Editar layout",
 	"date.to": "a",
-
   "layout.edit.btn": "Editar layout",
   "image.remove": "remover imagem",
   "image.selector": "Selecionar imagem",
